Updated Render port config and CORS for Vercel integration